[package]
name = "arc_repro_server_sdk"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "arc_repro_server_sdk"

[package.metadata.px.generate]
generator_type = "cargo_workspace_binary"
generator_name = "bp"

[lints]
clippy = { all = "allow" }

[dependencies]
arc_repro = { version = "0.1.0", path = "../arc_repro", package = "arc_repro" }
http = { version = "1.0.0", package = "http" }
hyper = { version = "1.1.0", package = "hyper" }
matchit = { version = "0.7.3", git = "https://github.com/ibraheemdev/matchit", branch = "master", package = "matchit" }
pavex = { version = "0.1.0", git = "https://github.com/LukeMathWalker/pavex", branch = "main", package = "pavex" }
thiserror = { version = "1.0.51", package = "thiserror" }
